# latex

./: .bumpversion.cfg  .cspell.json  .quickdocs.yml  .template.yml  .travis.yml  Gruntfile.js  README.md  build.sh  package.json  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yaml  review.yml
docs/: conf.py  index.rst  usage.md
docs/sphinx/: conf.py
src/: __init__.py  __main__.py  main.tex  template.tex
src/commands/: build.py  init.py
src/services/: formatters.py  loaders.py  logging.py  paths.py  renderers.py
src/templates/: inputs.json  main.tex.j2  template.tex.j2
